namespace TicTacToeV2
{
    public interface IBoardGames
    {
        void PlayGame();
    }
}
