namespace TicTacToeV2
{
    public enum PlayerType
    {
        Human,
        AI
    }
}
