namespace TicTacToeV2
{
    public enum Symbol
    {
        X,
        O,
        Empty
    }
}
